# skyward-lang

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  TODO.md  build.sh  example.sky  main.cpp  syntax.sky
application/: CMakeCache.txt  CMakeLists.txt  main.cpp
application/include/: common.hpp  error.hpp  flag.hpp  lexer.hpp  parser.hpp
application/src/: error.cpp  flag.cpp  lexer.cpp
docs/: LICENSE  README.md  TODO.md  control_flow.md  docs.txt  functions.md  loops.md  structs.md  variables.md
src/: error.hpp  lexer.hpp  parser.hpp  typedefs.hpp
tests/: example.sky  test.sky
